Implemented Parts of ACRA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,7 @@
     <string name="update_later">Später</string>
     <string name="update_never">Nicht erneut anzeigen</string>
 
+    <!-- Acra -->
+    <string name="acra_test">Test</string>
+
 </resources>
