--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@
     <string name="notification_channel_title">Vertretungsplan</string>
     <string name="notification_channel_description">Vertretungsplan</string>
     <string name="notif_content_title">Vertretung:</string>
+    <string name="notif_dismiss">Verbergen</string>
 
     <!-- AppUpdater -->
     <string name="update_available_title">Update verfügbar!</string>
