Added working implementation of ACRA and CrashReporter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">GymWen</string>
     <string name="title">Gymnasium Wendelstein</string>
-    <string name="subtitle">Offizielle App \n © 2019 Felix Hollederer</string>
+    <string name="subtitle">Offizielle App\n© 2019 Felix Hollederer</string>
     <string name="copyright">© 2019 Felix Hollederer</string>
 
     <!-- Navigation Drawer -->
@@ -165,6 +165,8 @@
     <string name="update_never">Nicht erneut anzeigen</string>
 
     <!-- Acra -->
-    <string name="acra_test">Test</string>
+    <string name="acra_dialog_title">Tut mir leid! Das hätte nicht passieren sollen. Die App ist abgestürzt.</string>
+    <string name="acra_dialog_content">Bitte füge hier einen Kommentar über das ein was du gemacht hast:</string>
+    <string name="acra_toast">Tut mir leid! Das hätte nicht passieren sollen.</string>
 
 </resources>
