--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_both">Auf einen Blick!</string>
     <string name="menu_impressum">Impressum</string>
     <string name="menu_update">Updates</string>
+    <string name="menu_changelog">Changelog</string>
 
     <!-- Main -->
     <string name="action_share">Teilen</string>
@@ -175,5 +176,11 @@
     <string name="acra_dialog_content">Bitte füge hier einen Kommentar über das ein was du gemacht hast:</string>
     <string name="acra_dialog_title">Das hätte nicht passieren sollen</string>
     <string name="acra_toast">Tut mir leid! Das hätte nicht passieren sollen.</string>
+
+    <!-- ckChangeLog -->
+    <string name="changelog_full_title">Change Log</string>
+    <string name="changelog_title">What\'s New</string>
+    <string name="changelog_ok_button">OK</string>
+    <string name="changelog_show_full">More…</string>
 
 </resources>
