--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,7 +176,7 @@
     \nVielen Dank!</string>
     <string name="acra_dialog_content">Bitte füge hier einen Kommentar über das ein was du gemacht hast:</string>
     <string name="acra_dialog_title">Das hätte nicht passieren sollen</string>
-    <string name="acra_toast">Tut mir leid! Das hätte nicht passieren sollen.</string>
+    <string name="acra_toast">Das hätte nicht passieren sollen.</string>
 
     <!-- ckChangeLog -->
     <string name="changelog_full_title">Änderungen \u0026 Verbesserungen</string>
