added about Author

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="menu_update">Updates</string>
     <string name="menu_changelog">Änderungen</string>
     <string name="menu_shop">Online Shop</string>
+    <string name="menu_about_author">Support</string>
 
     <!-- Main -->
     <string name="action_share">Teilen</string>
@@ -196,5 +197,16 @@
 
     <!-- Downloader -->
     <string name="down_permission_denied">Berechtigung verweigert</string>
+
+    <!-- AboutAuthor -->
+    <string name="about_author_sub">by @asdoi</string>
+    <string name="about_licenses">Lizenzen</string>
+    <string name="about_author_title">Entwickler</string>
+    <string name="about_author_name">Felix Hollederer</string>
+    <string name="about_gitlab_fork">Fork auf GitLab</string>
+    <string name="about_website">Besuche meine Website</string>
+    <string name="about_email">Sende mir eine E-Mail</string>
+    <string name="about_support_title">Support</string>
+    <string name="about_report">Fehler melden</string>
 
 </resources>
