--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_shop">Online Shop</string>
     <string name="menu_about_author">Support</string>
     <string name="menu_teacher_list">Lehrerliste</string>
+    <string name="menu_notes">Notizen</string>
 
     <!-- Main -->
     <string name="action_share">Teilen</string>
